# GRSS

./: .gitignore  CMakeLists.txt  README.MD  vcpkg.json
GRSS/: RCa89536  resource.h  resource.rc
GRSS/common/: Connections.cpp  Connections.h  Universe.cpp  Universe.h  Utility.h  Vector.h
GRSS/interface/: AddMassDialog.cpp  AddMassDialog.h  Backend.h  EnvironmentPage.cpp  EnvironmentPage.h  FrameMain.cpp  FrameMain.h  OpenGLPanel.cpp  OpenGLPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  RenderingPage.cpp  RenderingPage.h  SideBar.cpp  SideBar.h  SystemDialog.cpp  SystemDialog.h  TopPanel.cpp  TopPanel.h  Universe.h  main.cpp
GRSS/kernels/: test.cl
GRSS/physics/: CMakeLists.txt
GRSS/physics/include/: Mass.h  Physics.h
GRSS/physics/source/: Mass.cpp  Physics.cpp
GRSS/rendering/: CMakeLists.txt
GRSS/rendering/include/: Object.h  Rendering.h
GRSS/rendering/source/: Object.cpp  Rendering.cpp
